# new-organon

./: .gitignore  AGENTS.md  Cargo.toml  MAINTENANCE_REPORT.md  README.md  algo.txt  cb.txt  cr.txt  e.txt  ml.txt  mlp.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pregel.txt  procedures.txt  procedures_pipelines.txt  projection.txt  traits.txt  tsconfig.test.json
gdsl/: Cargo.toml  gdsl.linux-x64-gnu.node  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts
gdsl/doc/: ADDING-AN-APPLICATION-FACADE-OP.md  FORMDB-HYPERSTORE.md  GDS-LINK.md  cypher-as-foundation.md  form-loci-map.md  gdsl-architecture.md  kant-cognition.ipynb  kant-concept.ipynb  kant-idea.ipynb  kant-judgment.ipynb  kant-life.ipynb  kant-mathematics.ipynb  kant-metaphysics.ipynb  kant-physics.ipynb  kant-prolegomena.ipynb  kant-syllogism.ipynb  language-comparison.md  openapi-mvc-invocation.md  openapi-workflow-integration.md  rootagent-as-systemd.md
gdsl/examples/: cross-domain-inference.ts  gds-astar-stream.ts  gds-bellman-ford-estimate.ts  gds-bellman-ford-stats.ts  gds-bellman-ford-stream.ts  gds-betweenness-centrality-estimate.ts  gds-betweenness-centrality-stats.ts  gds-bfs-estimate.ts  gds-bfs-stats.ts  gds-bfs-stream.ts  gds-closeness-centrality-estimate.ts  gds-closeness-centrality-stats.ts  gds-degree-centrality-estimate.ts  gds-degree-centrality-mutate.ts  gds-degree-centrality-stats.ts  gds-dfs-stream.ts  gds-dijkstra-estimate.ts  gds-dijkstra-stats.ts  gds-dijkstra-stream.ts  gds-graph-exists.ts  gds-list-graphs-admin-scope.ts  gds-list-graphs.ts  gds-ping.ts  (+9 more)
(+2410 files in other folders)
