[package]
name = "gdsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gdsl"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

[build-dependencies]
napi-build = "2"

[dev-dependencies]
